--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,6 +1,8 @@
 {
   "intro_title": "Introduction",
-  "intro_description": "Hi, my name is Alexis, I live in Autonomous City of Buenos Aires, Argentina.\nI am a fullstack developer with {expYears} years experience making web applications, mainly with Java and Angular with PrimeNG.",
+  "intro_description": "Hi, my name is Alexis, I live in Autonomous City of Buenos Aires, Argentina.\nI am a fullstack developer with {expYears} years experience making web applications, mainly with Java and Angular.",
   "projects_title": "Projects",
-  "projects_description": "I participated in these projects."
+  "projects_description": "Some of the projects I have participated:",
+  "companies_title": "Companies",
+  "companies_description": "I collaborated with this companies, among others:"
 }
