--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1,6 +1,8 @@
 {
   "intro_title": "Presentación",
-  "intro_description": "Hola, me llamo Alexis, vivo en Ciudad Autónoma de Buenos Aires, Argentina.\nSoy desarrollador fullstack con {expYears} años de experiencia haciendo aplicaciones web, principalmente con Java y Angular con PrimeNG.",
+  "intro_description": "Hola, me llamo Alexis, vivo en Ciudad Autónoma de Buenos Aires, Argentina.\nSoy desarrollador fullstack con {expYears} años de experiencia haciendo aplicaciones web, principalmente con Java y Angular.",
   "projects_title": "Projectos",
-  "projects_description": "Participé en estos proyectos."
+  "projects_description": "Algunos de los proyectos en los que participé:",
+  "companies_title": "Empresas",
+  "companies_description": "Colaboré con estas empresas, entre otras:"
 }
