Cambio desc empresas.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -4,5 +4,5 @@
   "projects_title": "Projects",
   "projects_description": "Some of the projects I have participated:",
   "companies_title": "Companies",
-  "companies_description": "I collaborated with this companies, among others:"
+  "companies_description": "I collaborated with this companies:"
 }
