--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -4,5 +4,5 @@
   "projects_title": "Projectos",
   "projects_description": "Algunos de los proyectos en los que participé:",
   "companies_title": "Empresas",
-  "companies_description": "Colaboré con estas empresas, entre otras:"
+  "companies_description": "Colaboré con estas empresas:"
 }
