--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1,7 +1,7 @@
 {
   "intro_title": "Presentación",
   "intro_description": "Hola, me llamo Alexis, vivo en Ciudad Autónoma de Buenos Aires, Argentina.\nSoy desarrollador fullstack con {expYears} años de experiencia haciendo aplicaciones web, principalmente con Java y Angular.",
-  "projects_title": "Projectos",
+  "projects_title": "Proyectos",
   "projects_description": "Algunos de los proyectos en los que participé:",
   "projects_show_all_tecs": "Mostrar todas las tecnologías",
   "project_backend": "Backend",
