--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -6,6 +6,7 @@
   "projects_show_all_tecs": "Mostrar todas las tecnologías",
   "project_backend": "Backend",
   "project_frontend": "Frontend",
+  "project_tools": "Herramientas",
   "project_description": "¿Qué es?",
   "project_work_done": "¿Qué hice?",
   "companies_title": "Empresas",
